# SurfaceTest

./: .gitignore  ReadMe.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mgg/surface/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_processing_util_jni.cc  native-lib.cpp  opengl_renderer_jni.cpp
app/src/main/java/com/mgg/surface/: CameraXViewModel.java  FpsRecorder.java  ImageProcessingUtil.java  ImageProcessingUtilTest.java  JpegBytes2ImageDeviceTest.kt  MainActivity.kt  OpenGLActivity.java  OpenGLRenderer.java  SingleThreadHandlerExecutor.java  SurfaceViewRenderSurface.java  Surfaces.java  TextureViewRenderSurface.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: opengl_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mgg/surface/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
